update version working on ArcGIS Pro and ArcMap

--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,11 @@
 gdb_path = C:\mandresy\sig\SeineOuest.gdb
 nom_feature_class=bal_boulogne
 
-[lien_api]
+[lien_url]
 prefix=https://plateforme-bal.adresse.data.gouv.fr/api-depot/communes/
 commune=92012/
 sufix=current-revision/files/bal/download
+
+# Bientôt disponible quand on aura la use case
+[lien_api] 
+url=https://data.seineouest.fr/api/explore/v2.1/catalog/datasets/base-adresse/records?limit=20
